--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+.env
+.env.local
+.env.production
+*.key
+*.pem
+config/secrets.json
+
 # dependencies
 /node_modules
 /.pnp
